# getoptpp

./: README.md  configure.ac
src/: Makefile.am  getoptpp.cpp  getoptpp.h
test/: Makefile.am  test.cpp
